API & UI: Added new funtionalities in Api and UI.

--- a/ContactManagement/API/ContactsApp/appsettings.json
+++ b/ContactManagement/API/ContactsApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CorsSetting": {
+    "Origin": "http://localhost:4200/"
+  },
   "AllowedHosts": "*"
 }
